Set Home activity with fragment and bottom navigation view, set device current location based on GPS

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,14 @@
 <resources>
-    <string name="app_name">Safeurb</string>
-    <string name="title_activity_main">Safeurb</string>
+    <string name="app_name">SafeUrb</string>
+    <string name="title_activity_main">SafeUrb</string>
+    <string name="title_activity_buttom">buttomActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+    <string name="title_location">Location</string>
+    <string name="title_activities">Activities</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
