--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,9 @@
     <string name="title_activities">Actividades</string>
     <string name="report_desc_hint">Describe lo sucedido...</string>
     <string name="publish_report_title">Publicar Reporte</string>
+    <string name="image_camera">Image Camera</string>
+    <string name="publish_notice">El reporte se registrará desde tu ubicación actual para luego ser usado en el mapa.</string>
+    <string name="publicar">Publicar</string>
 
     <string-array name="report_types">
         <item>Asalto</item>
