--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="author_linkedin_profile">https://www.linkedin.com/in/evolquez/</string>
     <string name="activities">Actividades</string>
     <string name="report_details">Detalles del reporte</string>
+    <string name="by_anonymous_author">Por <b>anónimo</b></string>
 
     <string-array name="report_types">
         <item>Asalto</item>
@@ -31,5 +32,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="thanks_for_reporting">Gracias por reportar, tu ayuda hará de la sociedad un lugar más seguro.</string>
     <string name="no_activities_found">No se encontraron \nactividades reportadas!</string>
+    <string name="see_image">Ver imagen</string>
+    <string name="close">Cerrar</string>
 
 </resources>
